# unisys-rest-march-2024

./: .gitignore  Readme.md
day-01/: Notes.md  Readme.md  contact-service-requests.http  movie-requests.http  request-test.py  show-contacts.html  vinbasket.http
day-01/node-rest-endpoint/: index.js  package-lock.json  package.json
day-01/react-customer-dashboard/: package-lock.json  package.json
day-01/react-customer-dashboard/public/: index.html
day-01/react-customer-dashboard/src/: App.js
day-02/: Readme.md
day-02/CMakeRestEndpoint/: CMakeLists.txt  CMakeRestEndpoint.cpp  Handlers.cpp  Service.cpp  Utils.cpp
day-02/CMakeRestEndpoint/headers/: CORS.h  Handlers.h  JsonOnly.h  Service.h  Utils.h
day-03/: Readme.md
day-03/CppRestClientDemo/: CMakeLists.txt  CprRestClientDemo.cpp
day-04/: Readme.md
day-04/AspNetCoreCustomersWebApi/: AspNetCoreCustomersWebApi.csproj  AspNetCoreCustomersWebApi.http  AspNetCoreCustomersWebApi.sln  Program.cs  WeatherForecast.cs  appsettings.json  dockerfile
day-04/AspNetCoreCustomersWebApi/Controllers/: CustomersController.cs  WeatherForecastController.cs
day-04/AspNetCoreCustomersWebApi/DTO/: CustomerDTO.cs
day-04/AspNetCoreCustomersWebApi/Data/: AppDbContext.cs
day-04/AspNetCoreCustomersWebApi/Migrations/: 20240404081448_IntitialCreate.Designer.cs  20240404081448_IntitialCreate.cs  20240405013521_CustomerIamgeData.cs  (+6 more)
day-05/: Readme.md
day-05/DotNetRestClientApp/: Contact.cs  ContactList.cs  DotNetRestClientApp.sln  Program.cs
day-05/GreetingsApi/: GreetingsApi.csproj  GreetingsApi.sln  WeatherForecast.cs
(+5 files in other folders)
